scss/_web-components.scss
/* ... */
@supports (font-variation-settings: normal) {
  il-footer *[slot="links"] {
    h2, h3, h4, h5, h6 {
      font-weight: normal;
      font-variation-settings: "wght" 700;
    }
  }
}

@media (min-width: 800px) {
  il-footer *[slot="links"] ul {
    &.il-featured, &.il-buttons {
      grid-column-end: span 2;
      flex-direction: row;
      flex-wrap: wrap;
    }

    &.il-featured li, &.il-buttons li {
      margin: 0 16px 16px 0;
    }

    &.il-featured a, &.il-buttons a {
      min-width: 80px;
      white-space: nowrap;
    }
  }
}

@media (min-width: 800px) {
  il-footer *[slot="links"] {
    grid-area: links;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 40px;

    > {
      ul, div {
        margin-bottom: 0;
      }
    }
  }
}

il-header {
  --il-menu-toggle-display:block;

  a {
    color: var(--il-blue);
    text-decoration: none;
  }

  * {
    &[slot="link-list"] {
      color: var(--il-orange);
      display: flex;
      flex-grow: 1;
      font-family: var(--il-source-sans);
      font-size: 0.75rem;
      justify-content: end;

      ul {
        display: flex;
        margin-bottom: 0;

        li {
          a {
            color: var(--il-blue);

            &:hover {
              color: var(--il-orange);
            }
            &:focus {
              outline: 2px dashed var(--il-orange);
            }
          }
          &:after {
            content: '/';
            color: var(--il-orange);
            padding: 0 2px;
          }
          &:last-child {
            &:after {
              content: unset;
            }
          }
        }
      }
    }

    &[slot="menu"] {
      background-color: var(--il-cloud-1);
    }
  }
}

@media (min-width: 600px) {
  il-header {
    --il-menu-toggle-display:none;
  }
}

.il-main-nav {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: var(--il-source-sans);
}

@media (max-width: 599px) {
  .il-main-nav {
    background-color: var(--il-cloud-1);
    padding: 30px 40px;

    > ul {
      box-sizing: border-box;
      margin: 0;
      padding: 0;
      list-style: none;

      > li {
        box-sizing: border-box;
        margin: 0;
        padding: 0;
        list-style: none;
        position: relative;
        border-bottom: 1px solid var(--il-industrial-blue);
        padding-right: 30px;

        &:after {
          content: "";
          display: block;
          width: 40px;
          height: 40px;
          position: absolute;
          top: 10px;
          right: -12px;
          background: url(images/main-nav-mobile-chevron-down.svg) center center no-repeat;
          background-size: 16px 16px;
          cursor: pointer;
        }

        > {
          a {
            color: inherit;
            text-decoration: none;
            font-weight: 700;
            display: block;
            padding: 12px 0 14px;
            font-size: 22px;
            line-height: 1.5em;
          }

          ul {
            box-sizing: border-box;
            margin: 0;
            padding: 0;
            list-style: none;
            padding-left: 15px;
            padding-bottom: 10px;
            display: none;

            > li {
              box-sizing: border-box;
              margin: 0;
              padding: 0;
              list-style: none;

              > a {
                color: inherit;
                text-decoration: none;
                padding: 6px 0;
                display: block;
                font-size: 20px;
                line-height: 1.5;
                color: var(--il-blue);
              }
            }
          }
        }
      }
    }
  }

  @supports (font-variation-settings: normal) {
    .il-main-nav > ul > li > a {
      font-weight: normal;
      font-variation-settings: "wght" 700;
    }
  }
}
/* ... */

